--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "vercel-build": "ts-node-dev --transpile-only src/server.ts",
     "dev": "ts-node-dev --transpile-only src/server.ts",
     "test": "karma start",
     "build": "webpack -p",
     "swagger-autogen": "node src/swagger.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vinicius Pessoa da Silva",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -25,6 +26,7 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-jasmine": "^4.0.2",
     "karma-webpack": "^5.0.0",
+    "nodemon": "^2.0.22",
     "ts-loader": "^9.2.8",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3",
