--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "outDir": "dist",
+    "baseUrl": ".",
     "lib": [
       "dom",
       "es2015.promise",
