--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,12 @@
     "builds": [
       {
         "src": "src/server.ts",
-        "use": "@now/node"
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "(.*)",
         "dest": "src/server.ts"
       }
     ]
